--- a/client/package.json
+++ b/client/package.json
@@ -8,6 +8,7 @@
     }
   },
   "dependencies": {
+    "axios": "^0.18.0",
     "react": "^16.4.0",
     "react-dom": "^16.4.0",
     "react-redux": "^5.0.7",
